--- a/src/vets/pages/Dashboard/Propietarios/propietarios.scss
+++ b/src/vets/pages/Dashboard/Propietarios/propietarios.scss
@@ -1,6 +1,118 @@
-.owners-section {
-  font-family: "Inter";
+.padding {
+  padding: 0 !important;
+  border-radius: 8px;
+}
+
+.propietarios {
+  background: #f6f8ff 0% 0% no-repeat padding-box;
+  width: 100%;
+  height: 100%;
   padding: 25px 45px;
+  font-family: "Inter";
+  .dropdown {
+    .filter-btn {
+     
+      padding: 10px !important;
+      border: 0;
+      background: #f6f8ff 0% 0% no-repeat padding-box;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #000 !important;
+      font: normal normal normal 13px/22px Inter;
+      margin-bottom: 0;
+     
+      p{
+        margin-bottom: 0 !important;
+      }
+      &:hover {
+        .fa-solid {
+          color: #fff !important;
+        }
+        .bi {
+          font: normal normal normal 18px Inter;
+          color: #fff !important;
+        }
+
+       
+      }
+      .fa-solid {
+        margin-left: 16px;
+        color: #acacac;
+      }
+      .bi {
+        font: normal normal normal 18px Inter;
+        color: #acacac;
+        margin-right: 10px;
+      }
+
+      color: #acacac;
+      font: normal normal normal 13px/22px Inter;
+      margin-bottom: 0;
+     
+    }
+    .dropdown-toggle {
+      border: 0 !important;
+      &::after {
+        display: none !important;
+      }
+    }
+    .dropdown-menu {
+      box-shadow: 0px 3px 12px #00000029;
+      border: 0;
+      border-radius: 8px;
+      width: 300px ;
+
+      position: absolute !important;
+      inset: 0px auto auto 0px !important;
+      transform: translate(-150px, 52px) !important;
+a:active{
+  background: transparent !important;
+}
+      .filter-dropdwon {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10px 20px;
+      }
+      .buttons {
+        margin: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .btn {
+          padding: 15px;
+        }
+        .btn-secondary {
+          color: #1d2328;
+          background-color: white;
+          border: 1px solid #b9bfc2 !important;
+          padding: 15px 20px;
+        }
+        .btn-apply {
+          background-color: #336cfb;
+          color: #fff;
+          padding: 15px 25px;
+        }
+      }
+      .form-label {
+        font: normal normal normal 12px/15px Inter;
+        letter-spacing: 0px;
+        color: #000000;
+      }
+      .form-select {
+        border: 1px solid #e2e6e9;
+        border-radius: 5px;
+        font: normal normal normal 14px/17px Inter;
+        letter-spacing: 0px;
+        color: #b9bfc2;
+      }
+    }
+  }
+  .history {
+    display: none !important;
+  }
   .main-title-box {
     .propietarios-main-title {
       font: normal normal bold 26px/31px Inter;
@@ -12,319 +124,222 @@
       text-align: start;
     }
   }
-  .owners-heading {
-   
-    h1 {
-      text-align: left;
-      font-weight: bold;
-      font-size: 31px;
-    }
-    p {
-      text-align: left;
-      font-size: 15px;
-      font-weight: 500;
-    }
-  }
-  .padding {
-    padding: 0 !important;
-  }
-
-  .owners-second {
+  .propietarios-table-container {
+    background: #fff;
     margin-top: 20px;
     border-radius: 8px;
-    background-color: #fff;
-    .history {
-      display: none !important;
-    }
-    .main-title-box {
-      .owners-main-title {
-        font: normal normal bold 26px/31px Inter;
-        margin-bottom: 5px;
-        text-align: start;
-      }
-      .owners-sub-title {
-        font: normal normal normal 12px/15px Inter;
-        text-align: start;
-      }
-    }
-    .owners-table-container {
-      padding: 20px;
-      .owners-filter-container-main {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .filter-box {
+    .card {
+      .card-header {
+        padding: 20px 25px;
+        .header-left{
           display: flex;
-          justify-content: center;
           align-items: center;
-          .has-search {
-            display: flex;
-            align-items: center;
-            .fa-search{
-              font-size: 17px;
-            }
-            .form-control-feedback {
-              position: absolute;
-              z-index: 2;
-              display: block;
-              width: 2.375rem;
-              height: 2.375rem;
-              line-height: 2.375rem;
-              text-align: center;
-              pointer-events: none;
-              color: #aaa;
-            }
-            .form-control {
-              padding-left: 2.375rem;
-              background: #f1f6f4 0% 0% no-repeat padding-box;
-              border-radius: 8px;
-            }
-          }
-          .filter-btn {
-            margin-left: 10px;
-            padding: 10px !important;
-            border: 0;
-            background: #f6f8ff 0% 0% no-repeat padding-box;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            &:hover{
-              .fa-solid{
-                font-size: 18px;
-               
-                 color: #fff !important;
-               }
-               .bi {
-                 font: normal normal normal 18px Inter;
-                 color: #fff !important;
-               }
-               p {
-                 color: #fff !important;
-                 font: normal normal normal 13px/22px Inter;
-                 margin-bottom: 0;
-                 margin-inline: 16px;
-               }
-            }
-            .fa-solid{
-             font-size: 18px;
-            
-              color: #acacac;
-            }
-            .bi {
-              font: normal normal normal 18px Inter;
-              color: #acacac;
-            }
-            p {
-              color: #000;
-              font: normal normal normal 13px/22px Inter;
-              margin-bottom: 0;
-              margin-inline: 16px;
-            }
-          }
-          .dropdown-toggle::after {
-            content: none; /* Hide the caret icon */
-          }
-          .active {
-            background-color: #336cfb !important;
-            p,
-            i {
-              color: #fff !important;
-            }
-          }
-          .dropdown-menu {
-            width: 270px;
-            .filter-dropdwon {
-              display: flex;
-              flex-direction: row;
-              justify-content: space-between;
-              padding: 10px 20px;
-            }
-            .calender {
-            
-              .form-label {
-                font: normal normal normal 12px/15px Inter;
-              }
-              .dateinput {
-                color: #aaa !important;
-               
-              }
-            }
-            .buttons {
-              margin: 20px;
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              .btn {
-                padding: 15px;
-              }
-              .btn-secondary {
-                color: #1d2328;
-                background-color: white;
-                border: 1px solid #b9bfc2 !important;
-                padding: 15px 20px;
-              }
-              .btn-apply {
-                background-color: #336cfb;
-                color: #fff;
-                padding: 15px 25px;
-              }
-            }
-          }
+          
         }
-        .owners-record-box {
-          font: normal normal medium 15px/19px Inter;
-          letter-spacing: -0.15px;
-          color: #8a98a5;
-          p {
-            margin-bottom: 0;
+        .header-right{
+          display: flex;
+          align-items: center;
+          .btn{
+            font: normal normal  14px/26px Inter;
+            font-weight: 500;
+          }
+          .export-btn{
+            margin-right: 10px;
+            background: #F6F8FF !important;
+            color: #000 !important;
+            .fa-solid{
+              
+              color: #000;
+            }
           }
         }
       }
-    }
-    .owners-table {
-      table {
-        width: 100%;
-        tr {
-         .th-space{
-          width:108px;
-         }
-          padding: 10px 0;
-          th {
-            text-align: start;
-            font: normal normal 600 12px/15px Inter;
-            border-bottom: 1px solid #e2e6e9;
-            color: #8a98a5;
-            padding: 10px 20px;
-            &:last-child{
-              text-align: end !important;
+      .card-body {
+        padding: 0 !important;
+
+        table {
+          thead {
+            tr {
+              th {
+                padding-left: 25px !important;
+                padding-right: 25px !important;
+                .td-space{
+                  width: 108px;
+                }
+              }
             }
           }
-          td {
-            font: normal normal  13px/21px Inter;
-            font-weight: normal;
-           padding: 1.25rem 20px !important;
-           text-align: start;
-           .dropdown {
-            .active {
-              background:#f1faff !important;
+          tbody {
+            tr {
+              td {
+                font: normal normal 13px/21px Inter;
+                font-weight: normal;
+                padding-left: 25px !important;
+                padding-right: 25px !important;
+                .dropdown {
+                  .active {
+                    background:#f1faff !important;
                       color:#3e97ff !important;
                       .fa-solid {
                         color: #3e97ff !important;
                        
                       }
-            }
-            .dropdown-toggle {
-              color: #000;
-              font-weight: normal;
-              background: #f6f8ff 0% 0% no-repeat padding-box;
-              border-radius: 8px;
-
-              &::after{
-                display: none !important;
-              }
-              .fa-solid {
-                color: #000;
-                margin-left: 10px;
-                font-size: 12px;
-              }
-              &:hover{
-                background:#f1faff !important;
-                color:#3e97ff ;
-                .fa-solid {
-                  color: #3e97ff;
-                 
+                  }
+                  .dropdown-toggle
+                   {
+                    color: #000;
+                    font-weight: normal;
+                    background: #f6f8ff 0% 0% no-repeat padding-box;
+                    border-radius: 8px;
+                    .fa-solid {
+                      color: #000;
+                      margin-left: 10px;
+                      font-size: 12px;
+                    }
+                    &:hover{
+                      background:#f1faff !important;
+                      color:#3e97ff ;
+                      .fa-solid {
+                        color: #3e97ff;
+                       
+                      }
+                    }
+                  }
+                  .dropdown-menu {
+                    box-shadow: 0px 3px 12px rgb(0 0 0 / 16%);
+                    border: 0;
+                    border-radius: 8px;
+                    width: 200px;
+                    position: absolute !important;
+                    inset: 0px auto auto 0px !important;
+                    transform: translate(-30px, 40px) !important;
+                    .delete {
+                      color: #fc5f6b;
+                    }
+                    .dropdown-item {
+                      padding-left: 0 !important;
+                      padding-right: 0 !important;
+                    }
+                  }
+                }
+                .rating-label {
+                  width: 100px;
+                  .blue-star {
+                    color: #ffad0f !important;
+                  }
+                  .grey-star {
+                    color: #dfe1e3 !important;
+                  }
+                }
+                .star-icon-wrapper {
+                  font-weight: 600;
+                  .bi {
+                    color: #336cfb;
+                    font-size: 18px;
+                    margin-bottom: 10px;
+                    margin-left: 5px;
+                  }
+                }
+                .fecha {
+                  width: 90px;
+                }
+                .view-btn {
+                  width: 108px !important;
+                }
+                &:nth-child(1) {
+                  width: 7%;
+                }
+                &:nth-child(2) {
+                  width: 29%;
+                }
+                &:nth-child(3) {
+                  width: 27%;
+                }
+                &:nth-child(4) {
+                  width: 15%;
+                }
+                &:nth-child(5) {
+                  width: 11%;
+                }
+                &:nth-child(6) {
+                  width: 12%;
+                }
+                &:last-child {
+                  text-align: end !important;
                 }
               }
             }
-            .dropdown-menu {
-              box-shadow: 0px 3px 12px rgb(0 0 0 / 16%);
-              border: 0;
-              border-radius: 8px;
-              width: 200px;
-              position: absolute !important;
-              inset: 0px auto auto 0px !important;
-              transform: translate(-30px, 40px) !important;
-              .delete {
-                color: #fc5f6b;
-              }
-              .dropdown-item {
-                padding-left: 0 !important;
-                padding-right: 0 !important;
-              }
-            }
           }
-          
-           &:nth-child(1){
-            width: 7%;
-          }
-          &:nth-child(2){
-            width: 29%;
-          }
-          &:nth-child(3){
-            width: 27%;
-          }
-          &:nth-child(4) {
-            width: 15%;
-          }
-          &:nth-child(5){
-            width: 11%;
-          }
-          &:nth-child(6){
-            width: 12%;
-          }
-           &:last-child{
-            text-align: end !important;
-           }
-            .star-icon-wrapper {
-              font-weight: bold;
-              .bi {
-                color: #336cfb;
-                margin-left: 5px;
-                font-size: 18px;
-                margin-bottom: 10px;
-              }
-            }
-            .status-wrapper {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              width: 100%;
-              .status-green {
-                width: 118px !important;
-                background: #25bb00 0% 0% no-repeat padding-box !important;
-              }
-              .status {
-                display: flex;
-                padding: 5px;
-                justify-content: space-around;
-                align-items: center;
-                background: #ffe229 0% 0% no-repeat padding-box;
-                border-radius: 18px;
-                width: 102px;
-                .fa-solid {
-                  font-size: 8px !important;
-                }
-                p {
-                  margin-bottom: 0;
-                }
-              }
-            }
-
-            padding: 10px 0;
-           
-          }
-          td:first-child {
-            font: normal normal 600 12px/15px Inter;
-
-            color: #8a98a5;
-          }
-         
-        }
-        tr:not(:last-child) {
-          border-bottom: 1px solid #e2e6e9; /* Adjust the border style as needed */
         }
       }
     }
+    .propietarios-filter-container-main {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .filter-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .form-control-feedback {
+          position: absolute;
+          z-index: 2;
+          display: block;
+          width: 2.375rem;
+          height: 2.375rem;
+          line-height: 2.375rem;
+          text-align: center;
+          pointer-events: none;
+          color: #aaa;
+        }
+        .form-control {
+          background: #f6f8ff 0% 0% no-repeat padding-box;
+          border-radius: 8px;
+          padding-left: 2.375rem;
+
+          &:focus {
+            box-shadow: none !important;
+            border: 0 !important;
+          }
+          &:focus-visible {
+            border: 0 !important;
+            outline: none !important;
+          }
+        }
+        // .filter-btn {
+        //   margin-left: 10px;
+
+        //   border: 0;
+        //   padding: 10px !important;
+        //   background: #f6f8ff 0% 0% no-repeat padding-box;
+        //   border-radius: 8px;
+        //   display: flex;
+        //   align-items: center;
+        //   justify-content: center;
+        //   .bi {
+        //     font: normal normal normal 22px Inter;
+        //     color: #acacac;
+        //   }
+        //   p {
+        //     color: #000;
+        //     font: normal normal normal 13px/22px Inter;
+        //     margin-bottom: 0;
+        //     margin-inline: 16px;
+        //   }
+        // }
+      }
+      .propietarios-record-box {
+        font: normal normal medium 15px/19px Inter;
+        letter-spacing: -0.15px;
+        color: #8a98a5;
+        p {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+  .propietarios-table {
+    background: #fff;
+    padding: 20px;
   }
 }
