--- a/src/vets/pages/Dashboard/calendario/calendario.scss
+++ b/src/vets/pages/Dashboard/calendario/calendario.scss
@@ -19,9 +19,40 @@
       margin-bottom: 0;
     }
   }
-  .maincontainer {
+  .calendario-main{
+background: #fff;
+margin-top: 20px;
+  width: 100%;
+.maincontainer-top{
+  padding: 25px;
+  border-bottom: 1px solid #E2E6E9;
+  .form-select{
+    background-color: #F6F8FF;
     border-radius: 8px;
-    margin-top: 20px;
+    font: normal normal  13px/26px Inter;
+    font-weight: 500;
+    letter-spacing: 0px;
+    color: #000000;
+    border: 0;
+
+  }
+  .select-arrow::after {
+    border-top-color: #FF0000 !important;
+  }
+  .calendario-schedule-btn-group{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .btn{
+      font: normal normal 14px/26px Inter;
+      font-weight: 500;
+    }
+  }
+}
+  .maincontainer-bottom {
+    border-radius: 8px;
+  
     background: #fff;
     padding: 25px;
 
@@ -118,4 +149,5 @@ a{
       }
     }
   }
+}
 }
