--- a/src/vets/pages/Dashboard/graph/resumen/scss/graph.scss
+++ b/src/vets/pages/Dashboard/graph/resumen/scss/graph.scss
@@ -192,7 +192,7 @@ color: #707070;
   }
   .apexcharts-tooltip {
     box-shadow: 0px 0px 50px 0px rgba(82, 63, 105, 0.15) !important;
-
+background: #fff !important;
     .apexcharts-tooltip-title {
       color: #000;
       background: #fff !important;
