--- a/src/vets/pages/Dashboard/main/main.scss
+++ b/src/vets/pages/Dashboard/main/main.scss
@@ -17,4 +17,60 @@
     width: 100%;
     --bs-gutter-x: 0;
   }
+  .drop-down{
+    position: absolute;
+    right: 30px;
+    .dropdown {
+      .active {
+        background:#f1faff !important;
+          color:#3e97ff !important;
+          .fa-solid {
+            color: #3e97ff !important;
+           
+          }
+      }
+      .dropdown-toggle
+       {
+        color: #000;
+        font-weight: normal;
+        background: #fff 0% 0% no-repeat padding-box;
+        border-radius: 8px;
+        &::after{
+          display: none !important;
+        }
+        .fa-solid {
+          color: #000;
+          margin-left: 10px;
+          font-size: 12px;
+        }
+        &:hover{
+          background:#f1faff !important;
+          color:#3e97ff ;
+          .fa-solid {
+            color: #3e97ff;
+           
+          }
+        }
+      }
+      .dropdown-menu {
+        box-shadow: 0px 3px 12px rgb(0 0 0 / 16%);
+        border: 0;
+        border-radius: 8px;
+        width: 200px;
+        position: absolute !important;
+        inset: 0px auto auto 0px !important;
+        transform: translate(-30px, 40px) !important;
+        a:active{
+background: transparent !important;
+        }
+        .delete {
+          color: #fc5f6b;
+        }
+        .dropdown-item {
+          padding-left: 0 !important;
+          padding-right: 0 !important;
+        }
+      }
+    }
+   }
 }
